2004-01-06  Alexander Malysh  <a.malysh@centrium.de>
    * configure.in, configure: fixed CFLAGS for pthread_spinlock support.

2004-01-05  Alexander Malysh  <a.malysh@centrium.de>
    * gwlib/gw_uuid.c: trivial change, don't define _SVID_SOURCE if it's already
      defined.

2004-01-05  Alexander Malysh  <a.malysh@centrium.de>
    * configure, configure.in, gw-config.h.in, gwlib/counter.c: added pthread_spinlock support.
      Here some benchmarks (factor 6 faster):
	Counter benchmark (loop 10000000 with counter_[in|de]crease):
	w/ spinlock support:
	real    0m1.665s
	user    0m1.340s
	sys     0m0.035s

	real    0m1.513s
	user    0m1.365s
	sys     0m0.000s

	real    0m1.501s
	user    0m1.360s
	sys     0m0.005s

	w/o spinlock support (mutex based):
	real    0m6.685s
	user    0m6.255s
	sys     0m0.010s

	real    0m6.687s
	user    0m6.230s
	sys     0m0.030s

	real    0m6.703s
	user    0m6.270s
	sys     0m0.010s

2003-12-18  Stipe Tolj  <tolj@wapme-systems.de>
    * contrib/kannel-monitor/index.php: fixed fread() problem if XML output is
      too big. Thanks to Angel for this quick patch.
      [Msg-ID: <200312181230.hBICUvh16011@int-mail01.mediafusion.es>]

2003-12-17  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/bb_boxc.c, gwlib/gw_uuid.[ch], gwlib/utils.[ch], radius/radius_pdu.c,
      test/wapproxy.c: fixed strict compiler warnings.

2003-12-17  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/smsc/smpp_pdu.c: making compiler and Alex happy again ;)

2003-12-16  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/smsc/smpp_pdu.c: removed debug output while packing optional v3.4 
      parameters and added better debug output for dumping of the PDU. 
      No logic change.

2003-12-16  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/wap-appl.c: added access-log logging of upstream HTTP server failures
      with HTTP response code 502 (bad gateway). So even in case the HTTP server
      can not be resolved or is not reachable, user's will be logged with a